v0.0.5-alpha
- Beruf wird übernommen
- Fixed MIDAS Scrambling