@@ -74,5 +74,5 @@ class Treatments:
         return ". ".join(filter(
             lambda x: x != "", [self.doctors, self.basis_medication,
                                 self.acute_medication, self.alternatives,
-                                self.physio])) + "."
+                                self.physio]))
 
