@@ -1,3 +1,4 @@
 v0.0.5-alpha
 - Beruf wird übernommen
 - Fixed MIDAS Scrambling
+- Add afflictions-score
